<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_find_by" />

    <Spinner
        android:id="@+id/spinnerBy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/label_value" />

    <EditText
        android:id="@+id/etValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_value_check"
        android:inputType="text" />

</LinearLayout>
